--- a/.github/workflows/build-pull-request.yml
+++ b/.github/workflows/build-pull-request.yml
@@ -26,13 +26,13 @@ jobs:
   process-repos:
     runs-on: ubuntu-latest
     steps:
-      - name: Fetch repository names from secrets
+      - name: Fetch repository names from repository variables
         id: fetch_repos
         run: |
-          echo "Fetching repo names..."
-          REPO_NAME_1=${{ secrets.REPO_NAME_1 }}
-          REPO_NAME_2=${{ secrets.REPO_NAME_2 }}
-          REPO_NAME_3=${{ secrets.REPO_NAME_3 }}  # If you have a third secret
+          echo "Fetching repo names from repository variables..."
+          REPO_NAME_1=${{ github.repository_variables.REPO_NAME_1 }}
+          REPO_NAME_2=${{ github.repository_variables.REPO_NAME_2 }}
+          REPO_NAME_3=${{ github.repository_variables.REPO_NAME_3 }}  # If you have a third variable
           echo "Repository names fetched: $REPO_NAME_1, $REPO_NAME_2, $REPO_NAME_3"
           echo "REPO_NAME_1=$REPO_NAME_1" >> $GITHUB_ENV
           echo "REPO_NAME_2=$REPO_NAME_2" >> $GITHUB_ENV
