--- a/.github/workflows/build-pull-request.yml
+++ b/.github/workflows/build-pull-request.yml
@@ -13,7 +13,7 @@ on:
     inputs:
       repo1:
         # description: "Enter repository name (org/repo1)"
-        type: string
+        type: boolean
       repo2:
         # description: "Enable for repo2"
         type: boolean
