--- a/.github/workflows/build-pull-request.yml
+++ b/.github/workflows/build-pull-request.yml
@@ -20,6 +20,10 @@ on:
       hotfix:
         description: "Create a hotfix branch"
         type: boolean
+        
+permissions:
+  contents: write
+  pull-requests: write
 
 jobs:
   process-repos:
