--- a/.github/workflows/build-pull-request.yml
+++ b/.github/workflows/build-pull-request.yml
@@ -3,15 +3,9 @@ name: GitHub PR Pipeline
 on:
   workflow_dispatch:
     inputs:
-      aws-three-tier-web-architecture-workshop:
-        description: "Enable for aws-three-tier-web-architecture-workshop"
-        type: boolean
-      repo2:
-        description: "Enable for repo2"
-        type: boolean
-      repo3:
-        description: "Enable for repo3"
-        type: boolean
+      selected_repos:
+        description: "Select repositories"
+        type: string
       tag_name:
         description: "Tag name to apply"
         required: true
@@ -29,19 +23,26 @@ permissions:
 jobs:
   process-repos:
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
+    env:
+      REPO_LIST_JSON: ${{ vars.Repo_list }}  # Fetch the repository names from GitHub variable
 
-      - name: Build Selected Repository List
+    steps:
+      - name: Parse and Display Available Repositories
         run: |
-          echo "" > repo-list
-          [[ "${{ github.event.inputs.aws-three-tier-web-architecture-workshop }}" == "true" ]] 
-          [[ "${{ github.event.inputs.repo2 }}" == "true" ]] && echo "${{ vars.REPO_NAME_2 }}" >> repo-list
-          [[ "${{ github.event.inputs.repo3 }}" == "true" ]] && echo "${{ vars.REPO_NAME_3 }}" >> repo-list
-          
-          echo "📂 Selected repositories:"
+          echo "Fetching repository list..."
+          echo '${{ env.REPO_LIST_JSON }}' | jq -r '. | @sh' > repo-list
           cat repo-list
+
+      - name: Convert Selected Repos to Array
+        run: |
+          echo "Parsing selected repositories..."
+          SELECTED_REPOS="${{ github.event.inputs.selected_repos }}"
+          IFS=',' read -r -a REPO_ARRAY <<< "$SELECTED_REPOS"
+          
+          echo "✅ Repositories selected for processing:"
+          for REPO in "${REPO_ARRAY[@]}"; do
+            echo "- $REPO"
+          done
 
       - name: Authenticate GitHub CLI
         run: |
@@ -55,8 +56,7 @@ jobs:
           RELEASE: ${{ github.event.inputs.release }}
           HOTFIX: ${{ github.event.inputs.hotfix }}
         run: |
-          while read -r REPOSITORY; do 
-            [[ -z "$REPOSITORY" ]] && continue
+          for REPOSITORY in "${REPO_ARRAY[@]}"; do 
             echo "🚀 Processing repository: $REPOSITORY"
 
             # Clone the private repository
@@ -113,4 +113,4 @@ jobs:
             fi
 
             cd ..
-          done < repo-list
+          done
