--- a/.github/workflows/build-pull-request.yml
+++ b/.github/workflows/build-pull-request.yml
@@ -34,6 +34,13 @@ jobs:
             exit 1
           fi
 
+      - name: Authenticate GitHub CLI
+        env:
+          GH_TOKEN: ${{ secrets.PAT_TOKEN }}
+        run: |
+          echo "${GH_TOKEN}" | gh auth login --with-token
+          gh auth status
+
       - name: Clone Repository
         env:
           REPOSITORY: ${{ github.event.inputs.repo_name }}
@@ -51,9 +58,9 @@ jobs:
           cd $REPO_NAME
 
           # Ensure develop branch is checked out and up to date
-          git fetch origin develop
-          git checkout develop
-          git pull origin develop
+          git fetch origin develop || echo "⚠️ No develop branch found, skipping checkout."
+          git checkout develop 2>/dev/null || echo "⚠️ Failed to checkout develop branch, skipping."
+          git pull origin develop || echo "⚠️ Failed to pull latest develop branch."
 
           # Create and push the tag
           latest_commit=$(git rev-parse HEAD)
@@ -64,7 +71,7 @@ jobs:
       - name: Create Release Branch (if selected)
         if: github.event.inputs.release == 'true'
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
           REPO_NAME=$(basename "${{ github.event.inputs.repo_name }}")
           cd $REPO_NAME
@@ -72,5 +79,31 @@ jobs:
           release_branch="release-$(date +%Y%m%d)"
           git checkout -b "$release_branch"
           git push origin "$release_branch"
+          echo "🚀 Created release branch: $release_branch"
 
-          echo "🚀 Created release branch
+          # Create PR for Release Branch
+          gh pr create --repo "${{ github.event.inputs.repo_name }}" \
+            --head "$release_branch" --base develop \
+            --title "Release: $release_branch" \
+            --body "This is an automated release PR for $release_branch" \
+            --assignee "${{ github.actor }}" || echo "❌ PR creation failed for $release_branch"
+
+      - name: Create Hotfix Branch (if selected)
+        if: github.event.inputs.hotfix == 'true'
+        env:
+          GH_TOKEN: ${{ secrets.PAT_TOKEN }}
+        run: |
+          REPO_NAME=$(basename "${{ github.event.inputs.repo_name }}")
+          cd $REPO_NAME
+
+          hotfix_branch="hotfix-$(date +%Y%m%d)"
+          git checkout -b "$hotfix_branch"
+          git push origin "$hotfix_branch"
+          echo "🔥 Created hotfix branch: $hotfix_branch"
+
+          # Create PR for Hotfix Branch
+          gh pr create --repo "${{ github.event.inputs.repo_name }}" \
+            --head "$hotfix_branch" --base develop \
+            --title "Hotfix: $hotfix_branch" \
+            --body "This is an automated hotfix PR for $hotfix_branch" \
+            --assignee "${{ github.actor }}" || echo "❌ PR creation failed for $hotfix_branch"
